--- a/SharpSchedule.WPF/App.xaml
+++ b/SharpSchedule.WPF/App.xaml
@@ -1,9 +1,52 @@
 ﻿<Application x:Class="SharpSchedule.WPF.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:SharpSchedule.WPF"
-             StartupUri="MainWindow.xaml">
-    <Application.Resources>
-         
-    </Application.Resources>
+             xmlns:local="clr-namespace:SharpSchedule">
+  <Application.Resources>
+
+    <ResourceDictionary>
+      <ResourceDictionary.MergedDictionaries>
+        <ResourceDictionary Source="/Styles/Shared.xaml" />
+      </ResourceDictionary.MergedDictionaries>
+    </ResourceDictionary>
+        
+    <Style TargetType="Button">
+      <Setter Property="BorderThickness" Value="2.5" />
+      <Setter Property="BorderBrush" Value="{StaticResource AppGrey}" />
+      <Setter Property="FontSize" Value="20" />
+      <Setter Property="Padding" Value="10" />
+      <Style.Resources>
+        <Style TargetType="Border">
+          <Setter Property="CornerRadius" Value="7.5"/>
+        </Style>
+      </Style.Resources>
+    </Style>
+
+    <Style TargetType="Label">
+      <Setter Property="FontSize" Value="16" />
+    </Style>
+
+    <Style TargetType="TextBox">
+      <Setter Property="Background" Value="{StaticResource Grey30}" />
+      <Setter Property="BorderThickness" Value="0, 0, 0 , 2.5" />
+      <Setter Property="BorderBrush" Value="{StaticResource AppGrey}" />
+      <Setter Property="FontSize" Value="16" />
+      <Setter Property="Margin" Value="25, 0, 25, 0" />
+      <Setter Property="VerticalAlignment" Value="Center" />
+      <Setter Property="HorizontalAlignment" Value="Stretch" />
+    </Style>
+
+    <Style TargetType="RadioButton">
+      <Setter Property="FontSize" Value="12" />
+    </Style>
+
+    <Style TargetType="DataGridColumnHeader">
+      <Setter Property="FontSize" Value="24" />
+    </Style>
+
+    <Style TargetType="DataGridCell">
+      <Setter Property="FontSize" Value="18" />
+    </Style>
+
+  </Application.Resources>
 </Application>
