--- a/SharpSchedule.WPF/App.xaml
+++ b/SharpSchedule.WPF/App.xaml
@@ -9,6 +9,7 @@
     <ResourceDictionary>
       <ResourceDictionary.MergedDictionaries>
         <ResourceDictionary Source="/Styles/Shared.xaml" />
+        <ResourceDictionary Source="/Styles/NavBar.xaml" />
       </ResourceDictionary.MergedDictionaries>
       
       <Style TargetType="Button">
@@ -25,9 +26,14 @@
 
       <Style TargetType="Label">
         <Setter Property="FontSize" Value="16" />
+        <Setter Property="Foreground">
+          <Setter.Value>
+            <SolidColorBrush Color="White" />
+          </Setter.Value>
+        </Setter>
       </Style>
 
-      <Style TargetType="TextBox">
+      <!--<Style TargetType="TextBox">
         <Setter Property="Background" Value="{StaticResource Grey30}" />
         <Setter Property="BorderThickness" Value="0, 0, 0 , 2.5" />
         <Setter Property="BorderBrush" Value="{StaticResource AppGrey}" />
@@ -39,7 +45,7 @@
 
       <Style TargetType="RadioButton">
         <Setter Property="FontSize" Value="12" />
-      </Style>
+      </Style>-->
 
       <Style TargetType="DataGridColumnHeader">
         <Setter Property="FontSize" Value="24" />
