--- a/SharpSchedule.WPF/Styles/NavBarStyle.xaml
+++ b/SharpSchedule.WPF/Styles/NavBarStyle.xaml
@@ -2,8 +2,13 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:local="clr-namespace:SharpSchedule.Styles">
 
+  <Style x:Key="NavHeader" TargetType="Label">
+    <Setter Property="FontFamily" Value="./roboto-slab/#Roboto Slab" />
+    <Setter Property="Foreground" Value="White" />
+  </Style>
   <Style x:Key="NavButton" TargetType="RadioButton">
     <Setter Property="Foreground" Value="White" />
+    <Setter Property="FontFamily" Value="./roboto-slab/#Roboto Slab" />
     <Setter Property="Padding" Value="10 5" />
     <Setter Property="FontSize" Value="20" />
     <Setter Property="Background" Value="{StaticResource Light}" />
