--- a/SharpSchedule.WPF/Views/AddressesView.xaml
+++ b/SharpSchedule.WPF/Views/AddressesView.xaml
@@ -5,8 +5,24 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:SharpSchedule.Views"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
+             d:DesignHeight="880" d:DesignWidth="1920">
   <Grid>
+    <Grid.ColumnDefinitions>
+      <ColumnDefinition Width=".5*" />
+      <ColumnDefinition Width="4*" />
+      <ColumnDefinition Width="3*" />
+      <ColumnDefinition Width=".5*" />
+      <ColumnDefinition Width="4*" />
+      <ColumnDefinition Width="3*" />
+      <ColumnDefinition Width=".5*" />
+    </Grid.ColumnDefinitions>
+    <Grid.RowDefinitions>
+      <RowDefinition Height=".75*" />
+      <RowDefinition Height="1.5*" />
+      <RowDefinition Height="4*" />
+      <RowDefinition Height="1*" />
+      <RowDefinition Height="1*" />
+    </Grid.RowDefinitions>
     <TextBlock Text="Addresses" />  
   </Grid>
 </UserControl>
