--- a/SharpSchedule.WPF/App.xaml
+++ b/SharpSchedule.WPF/App.xaml
@@ -27,10 +27,11 @@
       <Style TargetType="Label">
         <Setter Property="FontSize" Value="16" />
         <Setter Property="Foreground" Value="White" />
+        <Setter Property="FontFamily" Value="Styles/roboto-slab/#Roboto Slab" />
       </Style>
 
-      <!--<Style TargetType="TextBox">
-        <Setter Property="Background" Value="{StaticResource Grey30}" />
+      <Style TargetType="TextBox">
+        <Setter Property="Background" Value="White" />
         <Setter Property="BorderThickness" Value="0, 0, 0 , 2.5" />
         <Setter Property="BorderBrush" Value="{StaticResource AppGrey}" />
         <Setter Property="FontSize" Value="16" />
@@ -41,7 +42,7 @@
 
       <Style TargetType="RadioButton">
         <Setter Property="FontSize" Value="12" />
-      </Style>-->
+      </Style>
 
       <Style TargetType="DataGridColumnHeader">
         <Setter Property="FontSize" Value="24" />
