--- a/SharpSchedule.WPF/App.xaml
+++ b/SharpSchedule.WPF/App.xaml
@@ -13,6 +13,8 @@
       </ResourceDictionary.MergedDictionaries>
       
       <Style TargetType="Button">
+        <Setter Property="Foreground" Value="White" />
+        <Setter Property="Background" Value="{StaticResource Light}" />
         <Setter Property="BorderThickness" Value="2.5" />
         <Setter Property="BorderBrush" Value="{StaticResource AppGrey}" />
         <Setter Property="FontSize" Value="20" />
