--- a/SharpSchedule.WPF/App.xaml
+++ b/SharpSchedule.WPF/App.xaml
@@ -14,16 +14,23 @@
       
       <Style TargetType="Button">
         <Setter Property="Foreground" Value="White" />
-        <Setter Property="Background" Value="{StaticResource Light}" />
-        <Setter Property="BorderThickness" Value="2.5" />
+        <Setter Property="Background" Value="{StaticResource WGU}" />
+        <Setter Property="BorderThickness" Value="2" />
         <Setter Property="BorderBrush" Value="{StaticResource AppGrey}" />
         <Setter Property="FontSize" Value="20" />
-        <Setter Property="Padding" Value="10" />
+        <Setter Property="Padding" Value="10 5" />
+        <Setter Property="HorizontalAlignment" Value="Center" />
+        <Setter Property="VerticalAlignment" Value="Center" />
         <Style.Resources>
           <Style TargetType="Border">
             <Setter Property="CornerRadius" Value="7.5"/>
           </Style>
         </Style.Resources>
+        <Style.Triggers>
+          <Trigger Property="IsMouseOver" Value="True">
+            <Setter Property="Background" Value="{StaticResource Light}" />
+          </Trigger>
+        </Style.Triggers>
       </Style>
 
       <Style TargetType="Label">
