--- a/SharpSchedule.WPF/Views/AddressesView.xaml
+++ b/SharpSchedule.WPF/Views/AddressesView.xaml
@@ -25,9 +25,7 @@
     <Label Grid.Column="1" Content="Addresses" HorizontalAlignment="Left" VerticalAlignment="Bottom"
            FontSize="30" Margin="0, 5"/>
 
-    <Button Grid.Column="1" Content="SEARCH" 
-            VerticalAlignment="Center" HorizontalAlignment="Right">
-    </Button>
+    <Button Grid.Column="1" Content="SEARCH" HorizontalAlignment="Right" />
 
     <TextBox Name="Addresses_Search" Grid.Column="2" Margin="38" FontSize="32" />
 
@@ -51,26 +49,18 @@
         <ColumnDefinition Width="*" />
       </Grid.ColumnDefinitions>
 
-      <Button Grid.Column="0" Content="Add" VerticalAlignment="Center" 
-              HorizontalAlignment="Center">
-      </Button>
+      <Button Grid.Column="0" Content="ADD" />
 
-      <Button Grid.Column="1" Content="Modify" VerticalAlignment="Center" 
-              HorizontalAlignment="Center">
-      </Button>
+      <Button Grid.Column="1" Content="MODIFY" />
 
-      <Button Grid.Column="2" Grid.Row="3" Content="Delete" VerticalAlignment="Center"
-              HorizontalAlignment="Center">
-      </Button>
+      <Button Grid.Column="2" Grid.Row="3" Content="DELETE" />
     </Grid>
     
     <Label Grid.Column="4" Content="Cities" HorizontalAlignment="Left" VerticalAlignment="Bottom"
            FontSize="30" Margin="0, 5" />
 
-    <Button Grid.Column="4" Content="SEARCH" 
-            VerticalAlignment="Center" HorizontalAlignment="Right">
-    </Button>
-
+    <Button Grid.Column="4" Content="SEARCH" HorizontalAlignment="Right" />
+ 
     <TextBox Name="Cities_Search" Grid.Column="5" Margin="38" FontSize="32" />
 
     <DataGrid Grid.Row="1" Grid.Column="4" Grid.ColumnSpan="2" AutoGenerateColumns="False" 
@@ -90,17 +80,11 @@
         <ColumnDefinition Width="*" />
       </Grid.ColumnDefinitions>
 
-      <Button Grid.Column="0" Content="Add" VerticalAlignment="Center"
-              HorizontalAlignment="Center">
-      </Button>
+      <Button Grid.Column="0" Content="ADD" />
 
-      <Button Grid.Column="1" Content="Modify" VerticalAlignment="Center"
-              HorizontalAlignment="Center">
-      </Button>
+      <Button Grid.Column="1" Content="MODIFY" />
 
-      <Button Grid.Column="2" Grid.Row="3" Content="Delete" VerticalAlignment="Center" 
-              HorizontalAlignment="Center">
-      </Button>
+      <Button Grid.Column="2" Grid.Row="3" Content="DELETE" />
     </Grid>
     
   </Grid>
