--- a/SharpSchedule.WPF/App.xaml
+++ b/SharpSchedule.WPF/App.xaml
@@ -73,6 +73,9 @@
       <DataTemplate DataType="{x:Type vms:AddressesVM}">
         <views:AddressesView />
       </DataTemplate>
+      <DataTemplate DataType="{x:Type vms:LoginVM}">
+        <views:LoginView />
+      </DataTemplate>
     </ResourceDictionary>
   </Application.Resources>
 </Application>
