--- a/SharpSchedule.WPF/Controls/BindablePasswordInput.xaml
+++ b/SharpSchedule.WPF/Controls/BindablePasswordInput.xaml
@@ -1,23 +1,18 @@
-﻿<UserControl x:Class="SharpSchedule.Views.LoginView"
+﻿<UserControl x:Class="SharpSchedule.Controls.BindablePasswordInput"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:SharpSchedule.Views"
+             xmlns:local="clr-namespace:SharpSchedule.Controls"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
   <Grid>
     <Grid.RowDefinitions>
       <RowDefinition Height="auto" />
       <RowDefinition Height="auto" />
-      <RowDefinition Height="auto" />
     </Grid.RowDefinitions>
 
-    <Grid>
-      <Grid.RowDefinitions>
-        <RowDefinition Height="auto" />
-        <RowDefinition Height="auto" />
-      </Grid.RowDefinitions>
-    </Grid>
-  </Grid>
+    <PasswordBox x:Name="passwordInput" />
+    <TextBlock x:Name="helperText" />
+  </Grid>  
 </UserControl>
