WIP: Reusable / Customized Input with validation

--- a/SharpSchedule.WPF/Styles/Shared.xaml
+++ b/SharpSchedule.WPF/Styles/Shared.xaml
@@ -3,7 +3,8 @@
                     xmlns:local="clr-namespace:SharpSchedule.Styles">
 
   <Color x:Key="WGUBlue">#002f51</Color>
-  <Color x:Key="WGULight">#006b8d</Color>
+  <Color x:Key="WGULight">#82bcd4</Color>
+  <Color x:Key="WGURed">#840028</Color>
   <SolidColorBrush x:Key="Grey60" Color="#60868E96"/>
   <SolidColorBrush x:Key="Grey30" Color="#30868E96"/>
   <SolidColorBrush x:Key="AppGrey" Color="#868E96"/>
