--- a/SharpSchedule.WPF/Controls/BindablePasswordInput.xaml
+++ b/SharpSchedule.WPF/Controls/BindablePasswordInput.xaml
@@ -8,11 +8,11 @@
              d:DesignHeight="450" d:DesignWidth="800">
   <Grid>
     <Grid.RowDefinitions>
-      <RowDefinition Height="auto" />
+      <RowDefinition Height="*" />
       <RowDefinition Height="auto" />
     </Grid.RowDefinitions>
 
-    <PasswordBox x:Name="passwordInput" />
-    <TextBlock x:Name="helperText" />
+    <PasswordBox x:Name="passwordInput" PasswordChanged="PasswordInput_PasswordChanged" />
+    <TextBlock Grid.Row="1" x:Name="helperText" />
   </Grid>  
 </UserControl>
