--- a/SharpSchedule.WPF/App.xaml
+++ b/SharpSchedule.WPF/App.xaml
@@ -9,6 +9,7 @@
     <ResourceDictionary>
       <ResourceDictionary.MergedDictionaries>
         <ResourceDictionary Source="/Styles/Shared.xaml" />
+        <ResourceDictionary Source="/Styles/InputStyle.xaml" />
         <ResourceDictionary Source="/Styles/NavBarStyle.xaml" />
       </ResourceDictionary.MergedDictionaries>
       
@@ -37,16 +38,6 @@
         <Setter Property="FontSize" Value="16" />
         <Setter Property="Foreground" Value="White" />
         <Setter Property="FontFamily" Value="Styles/roboto-slab/#Roboto Slab" />
-      </Style>
-
-      <Style TargetType="TextBox">
-        <Setter Property="Background" Value="White" />
-        <Setter Property="BorderThickness" Value="0, 0, 0 , 2.5" />
-        <Setter Property="BorderBrush" Value="{StaticResource AppGrey}" />
-        <Setter Property="FontSize" Value="16" />
-        <Setter Property="Margin" Value="25, 0, 25, 0" />
-        <Setter Property="VerticalAlignment" Value="Center" />
-        <Setter Property="HorizontalAlignment" Value="Stretch" />
       </Style>
 
       <Style TargetType="RadioButton">
