--- a/SharpSchedule.WPF/Views/LoginView.xaml
+++ b/SharpSchedule.WPF/Views/LoginView.xaml
@@ -2,22 +2,40 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:controls="clr-namespace:SharpSchedule.Controls"
              xmlns:local="clr-namespace:SharpSchedule.Views"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
+  
   <Grid>
     <Grid.RowDefinitions>
+      <RowDefinition Height="*" />
       <RowDefinition Height="auto" />
-      <RowDefinition Height="auto" />
-      <RowDefinition Height="auto" />
+      <RowDefinition Height="*" />
     </Grid.RowDefinitions>
 
-    <Grid>
+    <Grid Grid.Row="1">
       <Grid.RowDefinitions>
-        <RowDefinition Height="auto" />
-        <RowDefinition Height="auto" />
+        <RowDefinition Height="*" />
+        <RowDefinition Height="*" />
+        <RowDefinition Height="*" />
       </Grid.RowDefinitions>
+      <Grid.ColumnDefinitions>
+        <ColumnDefinition Width="*" />
+        <ColumnDefinition Width="*" />
+        <ColumnDefinition Width="*" />
+      </Grid.ColumnDefinitions>
+
+      <controls:BindableInput Grid.Column="1" Margin="0, 10, 0, 0"
+        Input="{Binding Username, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}"
+        HelperText="{Binding UsernameText, UpdateSourceTrigger=PropertyChanged, Mode=OneWay}"
+        Valid="{Binding UsernameValid, UpdateSourceTrigger=PropertyChanged, Mode=OneWay}" />
+
+      <controls:BindablePasswordInput Grid.Column="1" Grid.Row="1" Margin="0, 10, 0, 20"
+        Input="{Binding Password, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}"
+        HelperText="{Binding PasswordText, UpdateSourceTrigger=PropertyChanged, Mode=OneWay}"
+        Valid="{Binding PasswordValid, UpdateSourceTrigger=PropertyChanged, Mode=OneWay}" />
     </Grid>
   </Grid>
 </UserControl>
