WIP: Need Button and Redirect

--- a/SharpSchedule.WPF/App.xaml
+++ b/SharpSchedule.WPF/App.xaml
@@ -9,6 +9,7 @@
     <ResourceDictionary>
       <ResourceDictionary.MergedDictionaries>
         <ResourceDictionary Source="/Styles/Shared.xaml" />
+        <ResourceDictionary Source="/Styles/LoginStyle.xaml" />
         <ResourceDictionary Source="/Styles/InputStyle.xaml" />
         <ResourceDictionary Source="/Styles/NavBarStyle.xaml" />
       </ResourceDictionary.MergedDictionaries>
