--- a/SharpSchedule.WPF/Styles/LoginStyle.xaml
+++ b/SharpSchedule.WPF/Styles/LoginStyle.xaml
@@ -2,12 +2,21 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:local="clr-namespace:SharpSchedule.Styles">
 
-  <Style TargetType="TextBox">
+  <Style TargetType="TextBox" x:Key="LoginInput">
     <Setter Property="Background" Value="White" />
     <Setter Property="BorderThickness" Value="0, 0, 0 , 2.5" />
     <Setter Property="BorderBrush" Value="{StaticResource AppGrey}" />
-    <Setter Property="FontSize" Value="16" />
-    <Setter Property="Margin" Value="25, 0, 25, 0" />
+    <Setter Property="FontSize" Value="22" />
+    <Setter Property="Margin" Value="0, 0, 0, 0" />
+    <Setter Property="VerticalAlignment" Value="Center" />
+    <Setter Property="HorizontalAlignment" Value="Stretch" />
+  </Style>
+
+  <Style TargetType="PasswordBox">
+    <Setter Property="Background" Value="White" />
+    <Setter Property="BorderThickness" Value="0, 0, 0 , 2.5" />
+    <Setter Property="BorderBrush" Value="{StaticResource AppGrey}" />
+    <Setter Property="FontSize" Value="22" />
     <Setter Property="VerticalAlignment" Value="Center" />
     <Setter Property="HorizontalAlignment" Value="Stretch" />
   </Style>
