--- a/SharpSchedule.WPF/Views/LoginView.xaml
+++ b/SharpSchedule.WPF/Views/LoginView.xaml
@@ -10,32 +10,44 @@
   
   <Grid>
     <Grid.RowDefinitions>
-      <RowDefinition Height="*" />
+      <RowDefinition Height=".5*" />
       <RowDefinition Height="auto" />
       <RowDefinition Height="*" />
     </Grid.RowDefinitions>
 
     <Grid Grid.Row="1">
-      <Grid.RowDefinitions>
-        <RowDefinition Height="*" />
-        <RowDefinition Height="*" />
-        <RowDefinition Height="*" />
-      </Grid.RowDefinitions>
       <Grid.ColumnDefinitions>
         <ColumnDefinition Width="*" />
-        <ColumnDefinition Width="*" />
+        <ColumnDefinition Width="1.5*" />
         <ColumnDefinition Width="*" />
       </Grid.ColumnDefinitions>
 
-      <controls:BindableInput Grid.Column="1" Margin="0, 10, 0, 0"
+      <Grid Grid.Column="1">
+        <Grid.ColumnDefinitions>
+          <ColumnDefinition Width="*" />
+          <ColumnDefinition Width="1.5*" />
+          <ColumnDefinition Width="*" />
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+          <RowDefinition Height="*" />
+          <RowDefinition Height="*" />
+          <RowDefinition Height="*" />
+        </Grid.RowDefinitions>
+
+        <controls:BindableInput Grid.Column="1" Margin="0, 10, 0, 0"
         Input="{Binding Username, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}"
         HelperText="{Binding UsernameText, UpdateSourceTrigger=PropertyChanged, Mode=OneWay}"
-        Valid="{Binding UsernameValid, UpdateSourceTrigger=PropertyChanged, Mode=OneWay}" />
+        Valid="{Binding UsernameValid, UpdateSourceTrigger=PropertyChanged, Mode=OneWay}">
+          <controls:BindableInput.Resources>
+            <Style TargetType="TextBox" BasedOn="{StaticResource LoginInput}" />
+          </controls:BindableInput.Resources>
+        </controls:BindableInput>
 
-      <controls:BindablePasswordInput Grid.Column="1" Grid.Row="1" Margin="0, 10, 0, 20"
+        <controls:BindablePasswordInput Grid.Column="1" Grid.Row="1" Margin="0, 10, 0, 20"
         Input="{Binding Password, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}"
         HelperText="{Binding PasswordText, UpdateSourceTrigger=PropertyChanged, Mode=OneWay}"
         Valid="{Binding PasswordValid, UpdateSourceTrigger=PropertyChanged, Mode=OneWay}" />
+      </Grid>
     </Grid>
   </Grid>
 </UserControl>
