WIP: Login working

--- a/SharpSchedule.WPF/Controls/BindablePasswordInput.xaml
+++ b/SharpSchedule.WPF/Controls/BindablePasswordInput.xaml
@@ -6,6 +6,11 @@
              xmlns:local="clr-namespace:SharpSchedule.Controls"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
+
+  <Validation.ErrorTemplate>
+    <ControlTemplate />
+  </Validation.ErrorTemplate>
+
   <Grid>
     <Grid.RowDefinitions>
       <RowDefinition Height="*" />
