--- a/SharpSchedule.WPF/App.xaml
+++ b/SharpSchedule.WPF/App.xaml
@@ -35,9 +35,17 @@
         </Style.Triggers>
       </Style>
 
+      <Style TargetType="Grid">
+        <Setter Property="Validation.ErrorTemplate" Value="{x:Null}" />
+      </Style>
+
       <Style TargetType="Label">
         <Setter Property="FontSize" Value="16" />
         <Setter Property="Foreground" Value="White" />
+        <Setter Property="FontFamily" Value="Styles/roboto-slab/#Roboto Slab" />
+      </Style>
+
+      <Style TargetType="TextBlock">
         <Setter Property="FontFamily" Value="Styles/roboto-slab/#Roboto Slab" />
       </Style>
 
