--- a/SharpSchedule.WPF/Controls/BindableInput.xaml
+++ b/SharpSchedule.WPF/Controls/BindableInput.xaml
@@ -5,6 +5,11 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:SharpSchedule.Controls"
              mc:Ignorable="d">
+
+  <Validation.ErrorTemplate>
+    <ControlTemplate />
+  </Validation.ErrorTemplate>
+
   <Grid>
     <Grid.RowDefinitions>
       <RowDefinition Height="*" />
