--- a/SharpSchedule.WPF/MainWindow.xaml
+++ b/SharpSchedule.WPF/MainWindow.xaml
@@ -12,8 +12,19 @@
       <RowDefinition Height="auto" />
       <RowDefinition Height="*" />
     </Grid.RowDefinitions>
-    
-    <controls:NavBar DataContext="{Binding Navigator}" Grid.Row="0" />
+
+    <Grid Grid.Row="0">
+      <Grid.Style>
+        <Style TargetType="Grid">
+          <Style.Triggers>
+            <DataTrigger Binding="{Binding AuthService.IsLoggedIn}" Value="False">
+              <Setter Property="Visibility" Value="Collapsed" />
+            </DataTrigger>
+          </Style.Triggers>
+        </Style>
+      </Grid.Style>
+      <controls:NavBar DataContext="{Binding Navigator}" />
+    </Grid>
     <ScrollViewer Grid.Row="1" VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Disabled">
       <ContentControl Content="{Binding Navigator.CurrentVM}" />
     </ScrollViewer>
