--- a/SharpSchedule.WPF/Views/LoginView.xaml
+++ b/SharpSchedule.WPF/Views/LoginView.xaml
@@ -14,27 +14,26 @@
       <RowDefinition Height="auto" />
       <RowDefinition Height="*" />
     </Grid.RowDefinitions>
+    <Grid.ColumnDefinitions>
+      <ColumnDefinition Width="*" />
+      <ColumnDefinition Width=".5*" />
+      <ColumnDefinition Width="*" />
+    </Grid.ColumnDefinitions>
 
-    <Grid Grid.Row="1">
-      <Grid.ColumnDefinitions>
-        <ColumnDefinition Width="*" />
-        <ColumnDefinition Width="1.5*" />
-        <ColumnDefinition Width="*" />
-      </Grid.ColumnDefinitions>
-
-      <Grid Grid.Column="1">
-        <Grid.ColumnDefinitions>
-          <ColumnDefinition Width="*" />
-          <ColumnDefinition Width="1.5*" />
-          <ColumnDefinition Width="*" />
-        </Grid.ColumnDefinitions>
+    <Border Grid.Row="1" Grid.Column="1" BorderBrush="{StaticResource AppGrey}" 
+            Background="{StaticResource Grey30}" BorderThickness="2.5" CornerRadius="10">
+      <Grid Margin="20, 10">
         <Grid.RowDefinitions>
+          <RowDefinition Height="*" />
           <RowDefinition Height="*" />
           <RowDefinition Height="*" />
           <RowDefinition Height="*" />
         </Grid.RowDefinitions>
 
-        <controls:BindableInput Grid.Column="1" Margin="0, 10, 0, 0"
+        <TextBlock Foreground="{StaticResource WGU}" FontSize="28" FontWeight="Bold"
+                   Text="{Binding Message, UpdateSourceTrigger=PropertyChanged}" />
+
+        <controls:BindableInput Grid.Row="1" Margin="0, 10, 0, 0" 
         Input="{Binding Username, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}"
         HelperText="{Binding UsernameText, UpdateSourceTrigger=PropertyChanged, Mode=OneWay}"
         Valid="{Binding UsernameValid, UpdateSourceTrigger=PropertyChanged, Mode=OneWay}">
@@ -43,11 +42,13 @@
           </controls:BindableInput.Resources>
         </controls:BindableInput>
 
-        <controls:BindablePasswordInput Grid.Column="1" Grid.Row="1" Margin="0, 10, 0, 20"
+        <controls:BindablePasswordInput Grid.Row="2" Margin="0, 10, 0, 20"
         Input="{Binding Password, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}"
         HelperText="{Binding PasswordText, UpdateSourceTrigger=PropertyChanged, Mode=OneWay}"
         Valid="{Binding PasswordValid, UpdateSourceTrigger=PropertyChanged, Mode=OneWay}" />
+
+        <Button  Grid.Row="3" HorizontalAlignment="Center" Command="{Binding LoginCommand}" Content="LOGIN" />
       </Grid>
-    </Grid>
+    </Border>
   </Grid>
 </UserControl>
