WIP: Login, Redirect, and Logout finished

--- a/SharpSchedule.WPF/Controls/NavBar.xaml
+++ b/SharpSchedule.WPF/Controls/NavBar.xaml
@@ -42,20 +42,22 @@
         <ColumnDefinition Width="auto" />
         <ColumnDefinition Width="auto" />
         <ColumnDefinition Width="*" />
+        <ColumnDefinition Width="auto" />
       </Grid.ColumnDefinitions>
 
       <RadioButton Grid.Column="0" Content="Home" Command="{Binding UpdateCurrentVM}" 
-                   CommandParameter="{x:Static nav:ViewType.Home}"
-                   IsChecked="{Binding CurrentVM, Mode=OneWay, Converter={StaticResource EqualTo}, ConverterParameter={x:Type vms:HomeVM}}" />
+                   CommandParameter="{x:Static nav:ViewType.Home}"  Padding="10, 10, 10, 5"
+                   IsChecked="{Binding Navigator.CurrentVM, Mode=OneWay, Converter={StaticResource EqualTo}, ConverterParameter={x:Type vms:HomeVM}}" />
       <RadioButton Grid.Column="1" Content="Customers" Command="{Binding UpdateCurrentVM}" 
-                   CommandParameter="{x:Static nav:ViewType.Customers}"
-                   IsChecked="{Binding CurrentVM, Mode=OneWay, Converter={StaticResource EqualTo}, ConverterParameter={x:Type vms:CustomersVM}}" />
+                   CommandParameter="{x:Static nav:ViewType.Customers}"  Padding="10, 10, 10, 5"
+                   IsChecked="{Binding Navigator.CurrentVM, Mode=OneWay, Converter={StaticResource EqualTo}, ConverterParameter={x:Type vms:CustomersVM}}" />
       <RadioButton Grid.Column="2" Content="Appointments" Command="{Binding UpdateCurrentVM}" 
-                   CommandParameter="{x:Static nav:ViewType.Appointments}"
-                   IsChecked="{Binding CurrentVM, Mode=OneWay, Converter={StaticResource EqualTo}, ConverterParameter={x:Type vms:AppointmentsVM}}" />
+                   CommandParameter="{x:Static nav:ViewType.Appointments}"  Padding="10, 10, 10, 5"
+                   IsChecked="{Binding Navigator.CurrentVM, Mode=OneWay, Converter={StaticResource EqualTo}, ConverterParameter={x:Type vms:AppointmentsVM}}" />
       <RadioButton Grid.Column="3" Content="Addresses" Command="{Binding UpdateCurrentVM}" 
-                   CommandParameter="{x:Static nav:ViewType.Addresses}"
-                   IsChecked="{Binding CurrentVM, Mode=OneWay, Converter={StaticResource EqualTo}, ConverterParameter={x:Type vms:AddressesVM}}" />
+                   CommandParameter="{x:Static nav:ViewType.Addresses}"  Padding="10, 10, 10, 5"
+                   IsChecked="{Binding Navigator.CurrentVM, Mode=OneWay, Converter={StaticResource EqualTo}, ConverterParameter={x:Type vms:AddressesVM}}" />
+      <Button Grid.Column="5" Content="LOGOUT" Command="{Binding LogoutCommand}" Margin="5" />
     </Grid>
   </Grid>
 </UserControl>
