--- a/SharpSchedule.WPF/MainWindow.xaml
+++ b/SharpSchedule.WPF/MainWindow.xaml
@@ -23,7 +23,7 @@
           </Style.Triggers>
         </Style>
       </Grid.Style>
-      <controls:NavBar DataContext="{Binding Navigator}" />
+      <controls:NavBar />
     </Grid>
     <ScrollViewer Grid.Row="1" VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Disabled">
       <ContentControl Content="{Binding Navigator.CurrentVM}" />
