--- a/SharpSchedule.WPF/Styles/InputStyle.xaml
+++ b/SharpSchedule.WPF/Styles/InputStyle.xaml
@@ -7,9 +7,9 @@
     <Setter Property="BorderThickness" Value="0, 0, 0 , 2.5" />
     <Setter Property="BorderBrush" Value="{StaticResource AppGrey}" />
     <Setter Property="FontSize" Value="16" />
-    <Setter Property="Margin" Value="25, 0, 25, 0" />
     <Setter Property="VerticalAlignment" Value="Center" />
     <Setter Property="HorizontalAlignment" Value="Stretch" />
+    <Setter Property="Padding" Value="2" />
   </Style>
 
 </ResourceDictionary>
