WIP: Can Execute

--- a/SharpSchedule.WPF/Views/Dialogs/CityDialog.xaml
+++ b/SharpSchedule.WPF/Views/Dialogs/CityDialog.xaml
@@ -44,7 +44,7 @@
           <ColumnDefinition Width="*" />
         </Grid.ColumnDefinitions>
 
-        <Button HorizontalAlignment="Center" Command="{Binding CityCRUDCommand}"
+        <Button HorizontalAlignment="Center" Command="{Binding CRUDCommand, UpdateSourceTrigger=PropertyChanged}"
                 Content="{Binding CUDString}" Click="Dialog_True" />
 
         <Button Grid.Column="1" HorizontalAlignment="Center" Content="CANCEL" 
