--- a/SharpSchedule.WPF/Views/AddressesView.xaml
+++ b/SharpSchedule.WPF/Views/AddressesView.xaml
@@ -32,7 +32,9 @@
 
     <DataGrid Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="2" AutoGenerateColumns="False" 
               x:Name="AddressGrid" IsReadOnly="True" SelectionMode="Single"
-              ItemsSource="{Binding Addresses}">
+              ItemsSource="{Binding Addresses}" ScrollViewer.CanContentScroll="True"
+              ScrollViewer.VerticalScrollBarVisibility="Auto" MaxHeight="640"
+              ScrollViewer.HorizontalScrollBarVisibility="Auto">
       <DataGrid.Columns>
         <DataGridTextColumn Header="ID" Width=".25*" Binding="{Binding Id}" />
         <DataGridTextColumn Header="Street Address" Width="*" Binding="{Binding StreetAddress}" />
@@ -67,7 +69,10 @@
 
     <DataGrid Grid.Row="1" Grid.Column="4" Grid.ColumnSpan="2" AutoGenerateColumns="False" 
               Name="CityGrid" IsReadOnly="True" SelectionMode="Single"
-              ItemsSource="{Binding Cities}">
+              ItemsSource="{Binding Cities}" ScrollViewer.CanContentScroll="True"
+              ScrollViewer.VerticalScrollBarVisibility="Auto" MaxHeight="640"
+              ScrollViewer.HorizontalScrollBarVisibility="Auto"
+              SelectedItem="{Binding CitySelected, Mode=TwoWay}">
       <DataGrid.Columns>
         <DataGridTextColumn Header="ID" Width=".25*" Binding="{Binding Id}" />
         <DataGridTextColumn Header="Name" Width="*" Binding="{Binding Name}" />
@@ -84,11 +89,11 @@
 
       <Button Grid.Column="0" Content="CREATE" Command="{Binding NewCity}" />
 
-      <Button Grid.Column="1" Content="UPDATE" Command="{Binding UpdateDialog}" 
-                    CommandParameter="{Binding SelectedItem, ElementName=CityGrid}" />
+      <Button Grid.Column="1" Content="UPDATE" 
+              Command="{Binding UpdateCity, UpdateSourceTrigger=PropertyChanged}" />
 
-      <Button Grid.Column="2" Grid.Row="3" Content="DELETE" Command="{Binding CityDelete}" 
-                    CommandParameter="{Binding SelectedItem, ElementName=CityGrid}" />
+      <Button Grid.Column="2" Grid.Row="3" Content="DELETE" 
+              Command="{Binding CityDelete, UpdateSourceTrigger=PropertyChanged}" />
     </Grid>
     
   </Grid>
